made dynamic creation of divs. have some bugs like divs overflowing its parent container.

--- a/style.css
+++ b/style.css
@@ -35,15 +35,14 @@ body {
   width: 40rem;
   height: 40rem;
   position: relative;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-around;
+  display: grid;
+
  
 }
 
 .pixel {
   display: block;
-  height: 1rem;
+
   box-sizing: border-box;
   padding-top: 100%;
   border: 1px solid rgb(221, 221, 221);
